--- a/nginx/configs/nginx.conf
+++ b/nginx/configs/nginx.conf
@@ -2,8 +2,17 @@ server {
     listen 80;
     server_name localhost;
 
+    root /var/www/html;
+    index index.php index.html;
+
     location / {
-        return 200 "Nginx is up!";
-        add_header Content-Type text/plain;
+        try_files $uri $uri/ /index.php?$args;
+    }
+
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass wordpress:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 }
