--- a/nginx/configs/nginx.conf
+++ b/nginx/configs/nginx.conf
@@ -1,7 +1,11 @@
 server {
-    listen 80;
-    server_name localhost;
+    listen 443 ssl;
+    server_name emyildir.42.fr;
 
+	ssl_certificate /etc/nginx/ssl/nginx.crt;
+	ssl_certificate_key /etc/nginx/ssl/nginx.key;
+	ssl_protocols TLSv1.2 TLSv1.3;
+	
     root /var/www/html;
     index index.php index.html;
 
