--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -24,6 +24,10 @@ services:
       interval: 1s
       timeout: 2s
       retries: 20
+    secrets:
+      - wp_admin_password
+      - wp_user_password
+      - db_user_password
   mariadb:
     build: ./mariadb
     restart: always
@@ -36,6 +40,9 @@ services:
       interval: 1s
       timeout: 2s
       retries: 20
+    secrets:
+      - db_root_password
+      - db_user_password
 
 volumes:
   wordpress_files:
@@ -43,3 +50,13 @@ volumes:
 
 networks:
   default: 
+
+secrets:
+  wp_admin_password:
+    file: ../secrets/wp_admin_password.txt
+  wp_user_password:
+    file: ../secrets/wp_user_password.txt
+  db_root_password:
+    file: ../secrets/db_root_password.txt
+  db_user_password:
+    file: ../secrets/db_user_password.txt
